<resources>
    <string name="app_name">hey_smiley</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ukinosita Ukino</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chat">chat</string>
    <string name="menu_people">people</string>
    <string name="menu_smileys">smileys</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="welcome">"welcome !"</string>
    <string name="invalid_username">not a valid username</string>
    <string name="invalid_password">password must be >5 characters</string>
    <string name="login_failed">login failed</string>
    <string name="alert_title">warning</string>
    <string name="alert_sms">your email is not verified, please check your email</string>
    <string name="users">Users</string>
    <string name="avatar_text">take a picture so that we can choose a suitable avatar for you</string>
    <string name="choose">gallery</string>
    <string name="camera">camera</string>
</resources>